--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    Hello world...This is my first Git work
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    <h1> Good bye </h1>
-   
+   <h6>copyright @aurodisplay.com</h6>
    
 </body>
 </html>
